# mold_management

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
mold_management/: constants.py  hooks.py  install.py  patches.txt  uninstall.py
mold_management/api/: mold.py
mold_management/config/: desktop.py
mold_management/mold_management/doctype/mold/: mold.js  mold.json  mold.py
mold_management/mold_management/doctype/mold_alteration/: mold_alteration.js  mold_alteration.json  mold_alteration.py
mold_management/mold_management/doctype/mold_default_material/: mold_default_material.json  mold_default_material.py
mold_management/mold_management/doctype/mold_management_settings/: mold_management_settings.js  mold_management_settings.json  mold_management_settings.py
mold_management/patches/v0_0_2/: sync_existing_molds.py
mold_management/patches/v0_0_3/: backfill_workspace_dashboard_resources.py
mold_management/public/js/: asset.js  asset_maintenance_log.js  asset_movement.js  asset_repair.js  item.js  mold_list.js  mold_shared.js  mold_storage_location_list.js
mold_management/services/: activity_log.py  asset_setup.py  customizations.py  dashboard.py  guardrails.py  lifecycle.py  spare_parts.py  storage.py  versioning.py  workspace.py
mold_management/setup/: resources.py
mold_management/tests/: test_api.py  test_asset_setup.py  test_dashboard.py  test_guardrails.py  test_lifecycle.py  test_mold_naming.py  test_mold_output_rules.py  test_resources.py  test_storage.py  test_versioning.py  test_workspace.py
mold_management/translations/: zh.csv
(+36 files in other folders)
